Exception Handling and get APIs
