# backend/src/main/java/com/hs_esslingen/insy/controller/CommentsController.java
@@ -2,7 +2,7 @@ package com.hs_esslingen.insy.controller;
 
 import java.util.List;
 
-import com.hs_esslingen.insy.dto.Comment;
+import com.hs_esslingen.insy.dto.CommentDTO;
 import com.hs_esslingen.insy.service.CommentsService;
 
 import lombok.RequiredArgsConstructor;
@@ -18,21 +18,19 @@ public class CommentsController {
     private final CommentsService commentsService;
 
     @GetMapping
-    public ResponseEntity<List<Comment>> getCommentsByInventoryId(@PathVariable("id") Integer id) {
-            List<Comment> comments = commentsService.getCommentsByInventoryId(id);
-            return new ResponseEntity<>(comments, HttpStatus.OK);
+    public ResponseEntity<List<CommentDTO>> getCommentsByInventoryId(@PathVariable("id") Integer id) {
+        List<CommentDTO> comments = commentsService.getCommentsByInventoryId(id);
+        return new ResponseEntity<>(comments, HttpStatus.OK);
     }
 
     @PostMapping
-    public ResponseEntity<Comment> createComment(@PathVariable("id") Integer inventoryId, @RequestBody Comment comment) {
-            Comment createdComment = commentsService.createComment(inventoryId, comment);
-            return new ResponseEntity<>(createdComment, HttpStatus.CREATED);
+    public ResponseEntity<CommentDTO> createComment(@PathVariable("id") Integer inventoryId, @RequestBody CommentDTO comment) {
+        CommentDTO createdComment = commentsService.createComment(inventoryId, comment);
+        return new ResponseEntity<>(createdComment, HttpStatus.CREATED);
     }
 
-        @DeleteMapping("/{commentId}")
-        public ResponseEntity<Void> deleteComment(@PathVariable("id") Integer inventoryId, @PathVariable("commentId") Integer commentId) {
-                commentsService.deleteComment(inventoryId, commentId);
-                return new ResponseEntity<>(HttpStatus.OK);
-}
-
+    @DeleteMapping("/{commentId}")
+    public void deleteComment(@PathVariable("id") Integer inventoryId, @PathVariable("commentId") Integer commentId) {
+        commentsService.deleteComment(inventoryId, commentId);
+    }
 }
